change maven-surefire-plugin jvm param